learning_programs/mac-address-scanner/build/log/idf_py_stderr_output_15183
Command: make -j 10 all
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c: In function 'app_main':
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:22:24: error: 'ESP_MAC_SOFTAP' undeclared (first use in this function); did you mean 'ESP_MAC_ETH'?
   22 |     esp_read_mac(&mac, ESP_MAC_SOFTAP);
      |                        ^~~~~~~~~~~~~~
      |                        ESP_MAC_ETH
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:22:24: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/mac-address-scanner.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
